--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 appdirs==1.4.4
 asgiref==3.2.10
+blinker==1.4
 click==7.1.2
 distlib==0.3.1
 dnspython==2.0.0
 email-validator==1.1.1
 filelock==3.0.12
 Flask==1.1.2
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 fpdf==1.7.2
