--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,17 @@
-appdirs==1.4.4
-asgiref==3.2.10
-blinker==1.4
-click==7.1.2
-distlib==0.3.1
-dnspython==2.0.0
-email-validator==1.1.1
-filelock==3.0.12
-Flask==1.1.2
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-fpdf==1.7.2
-gunicorn==20.0.4
-idna==2.10
-importlib-metadata==2.0.0
-importlib-resources==3.0.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-mysqlclient==2.0.1
-psycopg2==2.8.6
-psycopg2-binary==2.8.6
-python-decouple==3.3
-pytz==2020.1
-six==1.15.0
-SQLAlchemy==1.3.20
-sqlparse==0.4.1
-virtualenv==20.0.35
-Werkzeug==1.0.1
-WTForms==2.3.3
-zipp==3.3.1
+click==8.1.3
+colorama==0.4.5
+Flask==2.1.2
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+greenlet==1.1.2
+gunicorn==20.1.0
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+psycopg2==2.9.3
+python-decouple==3.6
+SQLAlchemy==1.4.39
+Werkzeug==2.1.2
+WTForms==3.0.1
+zipp==3.8.0
